--- a/plugins/styles/style_rtl.css
+++ b/plugins/styles/style_rtl.css
@@ -208,7 +208,7 @@ p ,a,
 
 .banner_home .des_banner{
     position: absolute;
-    top: 50%;
+    top: 105px;
     left: 15px;
     right: 15px;
     text-align: center;
