--- a/plugins/styles/style.css
+++ b/plugins/styles/style.css
@@ -521,3 +521,80 @@ button:hover {
     display: block;
     font-weight: normal;
 }
+
+
+.popup_video{
+    position: relative;
+}
+.popup_video a i{
+    position: absolute;
+    font-size: 60px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: #fff;
+    line-height: 170px;
+}
+
+.des_about{
+    text-align: center;
+    padding: 0 15px;
+}
+.des_about h4{
+
+}
+.des_about h3{
+    font-size: 24px;
+    margin: 0 0 15px 0;
+}
+.des_about p{
+
+}
+
+
+
+.gallery-view-1 a {
+    margin-bottom: 5%;
+    height: 90px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+
+.gallery-view-1 a img{
+    min-height: 100%;
+    width: 100%;
+}
+
+
+.img_blogsar{
+
+}
+.img_blogsar img{
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    border: 1px solid #fff;
+}
+
+
+.timeline-item-content, .timeline-item-content-full {
+    min-height: 130px;
+}
+
+.timeline-deco {
+    right: 60px;
+    left: auto;
+}
+
+.timeline-item .timeline-icon {
+    right: 21px;
+    left: auto;
+    top: 30px;
+}
+
+.timeline-item-content, .timeline-item-content-full {
+    margin: 0 105px 30px 15px;
+    padding-right: 15px;
+}
